hphp/hack/test/typecheck/reified_generics/method_soft_reification.php.exp
File "method_soft_reification.php", line 16, characters 3-19:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "method_soft_reification.php", line 6, characters 19-29:
Definition is here
File "method_soft_reification.php", line 19, characters 3-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "method_soft_reification.php", line 7, characters 19-25:
Definition is here
File "method_soft_reification.php", line 34, characters 19-24:
Invalid reified hint (Typing[4305])
File "method_soft_reification.php", line 34, characters 19-24:
This is not reified, it cannot be used as a reified type argument
File "method_soft_reification.php", line 6, characters 48-48:
T is reified
File "method_soft_reification.php", line 35, characters 19-23:
Invalid reified hint (Typing[4305])
File "method_soft_reification.php", line 35, characters 19-23:
This is soft reified, it cannot be used as a reified type argument
File "method_soft_reification.php", line 6, characters 48-48:
T is reified
File "method_soft_reification.php", line 38, characters 15-20:
Invalid reified hint (Typing[4305])
File "method_soft_reification.php", line 38, characters 15-20:
This is not reified, it cannot be used as a reified type argument
File "method_soft_reification.php", line 7, characters 33-33:
T is reified
File "method_soft_reification.php", line 39, characters 15-19:
Invalid reified hint (Typing[4305])
File "method_soft_reification.php", line 39, characters 15-19:
This is soft reified, it cannot be used as a reified type argument
File "method_soft_reification.php", line 7, characters 33-33:
T is reified
